# fendapp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENCE  README.md  _typos.toml  build.rs  link.ellis.jade.fendapp.json  link.ellis.jade.fendapp.yml  release.toml  rustfmt.toml  signingkey.pub  sonar-project.properties
.github/workflows/: build_artifacts.yml  ci.yml  release.yml
assets/: link.ellis.jade.fendapp.metainfo.xml  link.ellis.jade.fendapp.releases.xml
scripts/: build_release_artifacts.nu  parse_changelog.nu  release.nu  write_appstream_releases.nu
src/: exchange_rates.rs  file_paths.rs  main.rs  prompt.rs  timeout.rs
