[package]
name = "fendapp"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/JadedBlueEyes/fendapp/"
authors = ["Jade Ellis <jade@ellis.link>"]
# description = "A native calculator with advanced features"


[package.metadata.packager]

product-name = "FendApp"
identifier = "link.ellis.jade.fendapp"
icons = [
  "assets/icon.png",
  "assets/icon-32x32.png",
  "assets/icon.ico"
]
category = "Utility"

[package.metadata.packager.deb.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.pacman.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.appimage.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.windows]

digest-algorithim = "SHA-256"

[package.metadata.winresource]
ProductName = "FendApp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



dioxus = { version = "0.5", default-features = false, features = ["macro", "signals", "hooks"]}

dioxus-hooks = { version = "0.5" }
dioxus-signals = { version = "0.5" }

fend-core = "1.4.1"
im-rc = "15.1.0"

[dependencies.freya]

git = "https://github.com/marc2332/freya.git"
# features = ["devtools"]
# path = "../freya/crates/freya"
# version = "0.1.8"

# [dependencies.skia-safe]

# version = "0.67.0"

# # https://github.com/rust-skia/rust-skia/blob/master/skia-bindings/README.md#prebuilt-binaries-in-an-offline-environment

# [target.'cfg( target_os = "linux" )'.dependencies.skia-safe]

# version = "0.67.0"
# features = ["all-linux", "use-system-jpeg-turbo"] 


# [target.'cfg( target_os = "windows" )'.dependencies.skia-safe]
# version = "0.67.0"
# features = ["all-windows"] 


[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
