[package]
name = "fendapp"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/JadedBlueEyes/fendapp/"
authors = ["Jade Ellis <jade@ellis.link>"]
# description = "A native calculator with advanced features"
license = "MIT"

[package.metadata.packager]

product-name = "FendApp"
identifier = "link.ellis.jade.fendapp"
category = "Utility"

homepage = "https://github.com/JadedBlueEyes/fendapp"
description = "Unit-aware calculator"
long-description = "Fendapp is an arbitrary-precision unit-aware calculator app."

copyright = "Copyright (c) Jade Ellis"
license-file = "LICENCE"


icons = [
  "assets/icon.svg",
  "assets/icon.png",
  "assets/icon-32x32.png",
  "assets/icon.ico"
]

[package.metadata.packager.deb.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.pacman.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.appimage.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.windows]

# This is a typo in cargo-packager
digest-algorithim = "SHA-256" # spellchecker:disable-line

[package.metadata.winresource]
ProductName = "FendApp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



dioxus = { version = "0.5", default-features = false, features = ["macro", "signals", "hooks"]}

dioxus-hooks = { version = "0.5" }
dioxus-signals = { version = "0.5" }

fend-core = "1.4.8"
home = "0.5.9"
im-rc = "15.1.0"
ureq = { version = "2.9.7", default-features = false, optional = true }
native-tls = { version = "0.2.12", optional = true }
windows-sys = "0.52.0"
rand = "0.8.5"

[dependencies.freya]

# git = "https://github.com/marc2332/freya.git"
# features = ["devtools"]
# path = "../freya/crates/freya"
version = "0.2.2"

# [dependencies.skia-safe]

# version = "0.67.0"

# # https://github.com/rust-skia/rust-skia/blob/master/skia-bindings/README.md#prebuilt-binaries-in-an-offline-environment

# [target.'cfg( target_os = "linux" )'.dependencies.skia-safe]

# version = "0.67.0"
# features = ["all-linux", "use-system-jpeg-turbo"] 


# [target.'cfg( target_os = "windows" )'.dependencies.skia-safe]
# version = "0.67.0"
# features = ["all-windows"] 

[target.'cfg( target_os = "windows" )'.build-dependencies]
winresource = "0.1"

[features]
native-tls = [ "dep:ureq", "dep:native-tls", "ureq/native-tls" ]
rustls = [ "dep:ureq", "ureq/tls" ]
default = [ "native-tls" ]

[profile.release]
lto = true
codegen-units = 1
