[package]
name = "fendapp"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/JadedBlueEyes/fendapp/"
authors = ["Jade Ellis <jade@ellis.link>"]
# description = "A native calculator with advanced features"
license = "MIT"

[package.metadata.packager]

product-name = "FendApp"
identifier = "link.ellis.jade.fendapp"
category = "Utility"

homepage = "https://github.com/JadedBlueEyes/fendapp"
description = "Unit-aware calculator"
long-description = "Fendapp is an arbitrary-precision unit-aware calculator app."

copyright = "Copyright (c) Jade Ellis"
license-file = "LICENCE"


icons = [
  # "assets/icon.svg",
  "assets/icon.png",
  "assets/icon-32x32.png",
  "assets/icon.ico"
]

[package.metadata.packager.deb.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.pacman.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.appimage.files]
"assets/link.ellis.jade.fendapp.metainfo.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.metainfo.xml"
"assets/link.ellis.jade.fendapp.releases.xml" = "/usr/share/metainfo/link.ellis.jade.fendapp.releases.xml"

[package.metadata.packager.windows]

# This is a typo in cargo-packager
digest-algorithim = "SHA-256" # spellchecker:disable-line

[package.metadata.winresource]
ProductName = "FendApp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



dioxus = { version = "0.6", default-features = false, features = ["macro", "signals", "hooks"]}

dioxus-hooks = { version = "0.6" }
dioxus-signals = { version = "0.6" }

fend-core = "1.5.7"
home = "0.5.12"
im-rc = "15.1.0"
ureq = { version = "3.1.4", default-features = false, optional = true }
native-tls = { version = "0.2.14", optional = true }
windows-sys = { version = "0.59.0", features = ["Win32_Storage", "Win32_Storage_FileSystem"] }
rand = "0.9.2"
dioxus-sdk = { version = "0.6.0", default-features = false, features = ["clipboard"] }
sentry = { version = "0.46.0", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "release-health", "transport", "anyhow", "reqwest"] }

[dependencies.freya]

# git = "https://github.com/marc2332/freya.git"
features = ["devtools"]
# path = "../freya/crates/freya"
version = "0.3.4"
[dev-dependencies.freya-testing]

version = "0.3.4"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["full"]
# [dependencies.skia-safe]

# version = "0.67.0"

# # https://github.com/rust-skia/rust-skia/blob/master/skia-bindings/README.md#prebuilt-binaries-in-an-offline-environment

# [target.'cfg( target_os = "linux" )'.dependencies.skia-safe]

# version = "0.67.0"
# features = ["all-linux", "use-system-jpeg-turbo"]


# [target.'cfg( target_os = "windows" )'.dependencies.skia-safe]
# version = "0.67.0"
# features = ["all-windows"]

[target.'cfg( target_os = "windows" )'.build-dependencies]
winresource = "0.1"

[features]
native-tls = [ "dep:ureq", "dep:native-tls", "ureq/native-tls", "sentry/native-tls" ]
rustls = [ "dep:ureq", "ureq/rustls", "sentry/rustls" ]
default = [ "native-tls" ]

[profile.release]
lto = true
codegen-units = 1
